--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,8 @@
     ],
     "require": {
         "getkirby/composer-installer": "^1.1"
+    },
+    "extra": {
+        "installer-name": "seo-preview-section"
     }
 }
